--- a/Blazor.Contacts.Wasm/Client/Blazor.Contacts.Wasm.Client.csproj
+++ b/Blazor.Contacts.Wasm/Client/Blazor.Contacts.Wasm.Client.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.23" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.23" PrivateAssets="all" />
+    <PackageReference Include="Radzen.Blazor" Version="4.22.1" />
   </ItemGroup>
 
   <ItemGroup>
