--- a/BlazorPokedex.Client/BlazorPokedex.Client.csproj
+++ b/BlazorPokedex.Client/BlazorPokedex.Client.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.23" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorPokedex.Models\BlazorPokedex.Models.csproj" />
+    <ProjectReference Include="..\BlazorPokedex.Services\BlazorPokedex.Services.csproj" />
+  </ItemGroup>
+
 </Project>
